--- a/css/index.css
+++ b/css/index.css
@@ -1392,7 +1392,7 @@ input::placeholder {
   z-index: -999;
   width: 100%;
   height: 100%;
-  background: url('/img/gaze.jpg');
+  background: url('https://cdn.statically.io/gh/qianmengqwq/picx-images-hosting@master/20231001/gaze.q2rt6j5a39c.webp');
   background-attachment: local;
   background-position: center;
   background-size: cover;
