--- a/css/global.css
+++ b/css/global.css
@@ -10,3 +10,38 @@
 #page-header {
   background: transparent !important;
 }
+
+/* 音乐插件aplayer */
+.aplayer.aplayer-fixed.aplayer-narrow .aplayer-body {
+  left: -66px !important;
+  transition: all 0.3s;
+  /* 默认情况下缩进左侧66px，只留一点箭头部分 */
+}
+
+.aplayer.aplayer-fixed.aplayer-narrow .aplayer-body:hover {
+  left: 0 !important;
+  transition: all 0.3s;
+  /* 鼠标悬停时左侧缩进归零，完全显示按钮 */
+}
+
+/* .aplayer.aplayer-fixed {
+  如果有被覆盖的情况，把这个打开
+  z-index: 999999 !important;
+} */
+
+/* 歌词盒子 */
+/* .aplayer .aplayer-lrc {
+  最外层盒子高度默认是30px,想改歌词的高度就得改最外层的
+} */
+/* .aplayer .aplayer-lrc .aplayer-lrc-contents {
+} */
+/* 歌词内容 */
+.aplayer .aplayer-lrc .aplayer-lrc-contents p {
+  line-height: 30px !important;
+  font-size: 20px !important;
+  color: cornflowerblue !important;
+}
+
+.aplayer.aplayer-fixed .aplayer-lrc {
+  text-shadow: 0 0 0 black !important;
+}
