--- a/css/global.css
+++ b/css/global.css
@@ -1,5 +1,14 @@
 /* 在这里面写一些全局的样式 */
 
+/* 字体 */
+@font-face {
+  font-family: "loli";
+  src: url("./font/loli.ttc");
+}
+
+* {
+  font-family: "loli";
+}
 /* 一图流: */
 /* 页脚透明 */
 #footer {
